# mech_inp

./: .gitignore  README.md  mechinp_train_431989.out  mechinp_train_colprobe_432068.out  mechinp_train_libprobe_432067.out  mechinp_val_432069.out  pyproject.toml  run_data_processing.sh
data/: data.py  get_data.sh
data/examples/: 1541886.sgf  20180721_0446_04545.sgf
scripts/: run_data_processing.sh  run_gpu_train_model.sh  run_gpu_train_probe_colour.sh  run_gpu_train_probe_liberties.sh  run_gpu_val_model.sh
src/: main.py  parse_data.py  train_model.py  train_probe.py  validate_model.py
src/custom_mingpt/: model.py  trainer.py
src/data_processing/: data.py
src/mech_inp/: go_game.py
src/utils/: logging.py  probing.py  timeout.py  utils.py  validation.py
tests/: test_data.py
